feat: Implement DataCollector service for collecting and processing pension data
- Added DataCollector class to handle data collection from the Open Data API.
- Implemented methods for cleaning data, extracting metadata, and saving to Parquet format.
- Introduced logging for API responses and errors.
- Added functionality to load dynamic UDDIs from OpenAPI documentation.
- Created a test script (test-api.js) to validate API connectivity and data retrieval.

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ API_KEY=your_api_key_here
 PORT=3000
 
 # API 베이스 URL (변경하지 마세요)
-API_BASE_URL=https://apis.data.go.kr/B552015/NpsBplcInfoInqireService
+API_BASE_URL=https://api.odcloud.kr/api
 
 # 로그 레벨 (개발: debug, 운영: info)
 LOG_LEVEL=debug
