--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test-api": "node test-api.js",
+    "collect-data": "node scripts/collect-data.js",
+    "collect-data-force": "node scripts/collect-data.js --force",
+    "collect-all": "node scripts/collect-all-endpoints.js",
+    "data-status": "node scripts/data-status.js",
+    "clean-data": "node scripts/collect-data.js && node scripts/data-status.js"
   },
   "keywords": [
     "data-visualization",
@@ -19,15 +25,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "chart.js": "^4.4.0",
-    "chartjs-node-canvas": "^4.1.6",
-    "csv-parser": "^3.0.0",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "parquetjs": "^0.11.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
