feat: Enhance data processing with detailed logging and performance metrics
- Added new dependency "@apache-arrow/es2015-esm" for improved data handling.
- Implemented detailed logging in DataProcessor for time series, summary, and statistics processing, including start and end times.
- Enhanced logging in index.js for API request handling, including data load and processing times.
- Improved dataCollector.js with performance metrics during Parquet file writing and loading, including progress updates and error handling.
- Added overall load time metrics for data loading by date range, with detailed file processing summaries.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@apache-arrow/es2015-esm": "^21.0.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
