--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "@apache-arrow/es2015-esm": "^21.0.0",
+    "apache-arrow": "^21.0.0",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
